# yamlbase

./: .gitignore  CHANGELOG.md  COMPATIBILITY_REPORT.md  CONTRIBUTING.md  CTE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  Dockerfile  Dockerfile.binary  Dockerfile.install  FEATURES_0.2.4.md  FEATURE_DELIVERY_SUMMARY.md  LICENSE-APACHE  Makefile  PRD.md  README.md  RELEASE.md  comprehensive_compatibility_test.py  quick_fuzz.rs  run_integration_tests.sh  test_feedback_queries.py  test_mysql_queries.sh  test_new_features.py  test_queries.sh  test_sqlalchemy_compatibility.py
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benches/: sql_performance.rs
docs/: TERADATA_PROTOCOL.md
examples/: README.md  advanced_types.yaml  blog_database.yaml  client_examples.md  cte_cross_references.sql  database_with_auth.yaml  enterprise.yaml  go_integration.go  minimal_database.yaml  mysql_8_auth_example.yaml  nodejs_integration.js  postgres_extended_example.yaml  python_integration.py  sample_database.yaml  simple_mysql_test.yaml  simple_test.yaml  sql_features_test.yaml  teradata_example.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_filter_parser.rs  fuzz_mysql_protocol.rs  fuzz_sql_parser.rs  fuzz_yaml_parser.rs
scripts/: setup-buildx.sh  setup-hooks.sh  validate-release.sh
src/: config.rs  lib.rs  main.rs  test_utils.rs
src/database/: index.rs  mod.rs  schema.rs  storage.rs
src/protocol/: connection.rs  mod.rs  mysql_caching_sha2.rs  mysql_simple.rs  postgres.rs  postgres_extended.rs
src/protocol/teradata/: auth.rs  connection.rs  mod.rs  parcels.rs  sql_translator.rs
src/server/: connection_manager.rs  mod.rs  tests.rs
src/sql/: executor.rs  executor_comprehensive_tests.rs  executor_tests.rs  mod.rs  parser.rs  recursive_cte.rs  tests_string_functions.rs
src/yaml/: mod.rs  parser.rs  schema.rs  tests.rs  watcher.rs
tests/: 100_percent_enterprise_sql_test.rs  100_percent_final_production_query_test.rs  advanced_date_arithmetic_test.rs  advanced_join_types_test.rs  between_cte_cross_reference_test.rs  coalesce_debug_test.rs  complex_aggregate_expressions_test.rs  complex_join_conditions_test.rs  complex_joins_in_cte_test.rs  complex_multitable_cte_test.rs  comprehensive_enterprise_validation_test.rs  customer_production_queries_test.rs  date_arithmetic_test.rs  date_literals_in_cte_test.rs  debug_max_test.rs  distinct_on_test.rs  enterprise_compatibility_validation_test.rs  enterprise_join_aggregates_test.rs  enterprise_load_test.rs  enterprise_sql_compatibility_test.rs  enterprise_validation_final_test.rs.disabled  group_by_cte_test.rs  index_performance_test.rs  mysql_8_integration_test.rs  mysql_auth_test.rs  mysql_caching_sha2_test.rs  mysql_caching_sha2_unit_test.rs  mysql_large_result_test.rs  mysql_protocol_test.rs  mysql_queries_test.rs  mysql_transaction_commands_test.rs  not_in_cte_test.rs  postgres_extended_flow_test.rs  postgres_extended_integration_test.rs  postgres_extended_test.rs  postgres_new_features_test.rs  postgres_params_debug_test.rs  postgres_parse_debug_test.rs  postgres_simple_test.rs  production_readiness_test.rs  (+12 more)
tests/common/: mod.rs
tests/integration/: async_safety_test.rs  basic_test.rs  mod.rs  mysql_test.rs
