[package]
name = "yamlbase"
version = "0.4.11"
edition = "2024"
rust-version = "1.88"
authors = ["Ruben J. Jongejan <ruben.jongejan@gmail.com>"]
description = "A lightweight SQL server that serves YAML-defined tables over standard SQL protocols"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rvben/yamlbase"
readme = "README.md"
homepage = "https://github.com/rvben/yamlbase"
documentation = "https://docs.rs/yamlbase"
keywords = ["sql", "yaml", "database", "testing", "development"]
categories = ["database", "development-tools::testing"]
exclude = ["/.github", "/assets", "/tests", "*.sh", "/coverage", "/.gitignore"]

[[bin]]
name = "yamlbase"
path = "src/main.rs"

[dependencies]
# Async runtime and networking
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.8"
futures = "0.3"

# PostgreSQL protocol
postgres-protocol = "0.6"
postgres-types = "0.2"

# SQL and data processing
sqlparser = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
humantime-serde = "1.1"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Performance and utilities
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
indexmap = { version = "2.6", features = ["serde"] }

# Authentication
md5 = "0.7"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"

# Pattern matching
regex = "1.11"
once_cell = "1.20"

# System and networking
libc = "0.2"

# MySQL protocol support
flate2 = { version = "1.0", features = ["zlib"] }

[features]
default = []
test-utils = []

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"
pretty_assertions = "1.4"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
mysql = "25.0"

[[bench]]
name = "sql_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
